[metadata]
name = moglabs_fzw
description = driver program for communication with a Moglabs Fizeau Laser Wavemeter
author = Joshua Wager
author_email= Jwage001@odu.edu
url = https://github.com/Graulab-ODU/moglabs_fzw
vesion = 0.0.1

[options]
packages = find:
install_requires = serial, rpyc, simple_pid