[metadata]
name = moglabs_fzw
description = package of various control programs for the equipment in Dr. Graus research lab at ODU
author = Joshua Wager
author_email= Jwage001@odu.edu
url = https://github.com/Graulab-ODU/laser_locking_software/
vesion = 0.0.1

[options]
packages = find:
install_requires = serial
